# jsonc-sdict

./: .gitignore  LICENSE  README-zh_CN.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-package.yml  python-test.yml
src/jsonc_sdict/: DiffMatchPatch.py  GetSetDel.py  Merge.py  Sdict.py  __init__.py  __main__.py  jsonc.py  merge.py  sdict.py  share.py  weakList.py
src/jsonc_sdict/integrations/: Pydantic.py  yadm.py
test/: old-empty.jsonc  old.hjson  old.jsonc  share.py  test_get_set_del.py  test_jsonc.py  test_merge.py  test_parser.py  test_performance_weak.py  test_pydantic_support.py  test_sdict.py  test_share.py  test_weakList.py
