[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
]
dependencies = ["deepdiff ~=8.6", "argcomplete ~=3.6", "tree-sitter >=0.25", "tree-sitter-json >=0.24", "fast-diff-match-patch ~=2.1"]
description = "keep comment(round-trip) when read & write jsonc/hjson,  sdict with extra context(parent/keypath), weakList & OrderedWeakSet"
keywords = ["config", "json", "jsonc", "hjson", "round-trip", "comment", "deepdiff", "deepmerge", "benedict", "weakList", "OrderedWeakSet"]
name = "jsonc_sdict"
readme = "README.md"
requires-python = ">=3.13"
version = "0.2.20260503"

[[project.authors]]
email = "nolca@qq.com"
name = "nolca"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = ["pytest", "hjson"]

[project.urls]
Download = "http://github.com/AClon314/jsonc-sdict/releases"
Homepage = "http://github.com/AClon314/jsonc-sdict"

[project.scripts]
deep-merge = "jsonc_sdict.Merge:_main_"

# NOTE: local dev
[tool.ty.environment]
extra-paths = ["./.thirdparty/fast_diff_match_patch"]
